# brick-django-cookiecutter

./: .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
tests/: test_base.py
{{cookiecutter.project_slug}}/: .env.example  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/app/: pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/app/{{cookiecutter.project_slug}}/: asgi.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/compose/django/: Dockerfile
{{cookiecutter.project_slug}}/compose/postgres/: Dockerfile
{{cookiecutter.project_slug}}/compose/traefik/: dynamic.yml
{{cookiecutter.project_slug}}/compose/traefik/certs/: example-key.pem  example.pem
{{cookiecutter.project_slug}}/compose/uv/: Dockerfile
