[project]
name = "brick-django-cookiecutter"
version = "0.1.0"
description = "Brick Cookiecutter template for Django projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "django>=5.2.6",
    "pre-commit>=4.3.0",
    "pytest-cookies>=0.7.0",
    "python-dotenv>=1.1.1",
]

[tool.ruff]
# Enable the formatter
line-length = 88  # same default as Black

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
